clusters/proxmox/apps/ozoo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ozoo-deployment
  namespace: ozoo
  labels:
    app: ozoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ozoo
  template:
    metadata:
      labels:
        app: ozoo
    spec:
      containers:
      - name: ozoo
        image: alemarchdev/ozoo-app:v1.12.4
        volumeMounts:
          - name: media-uploads
            mountPath: /app/public/media
        ports:
        - containerPort: 3000
      volumes:
      - name: media-uploads
        persistentVolumeClaim:
          claimName: file-pvc
      imagePullSecrets:
      - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: ozoo
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:8.2.4
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
          subPath: mongodb-data
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
