clusters/proxmox/apps/ozoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ozoo-service
  namespace: ozoo
spec:
  selector:
    app: ozoo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
  type: ClusterIP
